limit acces in swagger
